gogs/gogs.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs
  labels:
    name: gogs

spec:
  type: NodePort
  ports:
  - name: gogs-http
    port: 3000
    protocol: TCP
    nodePort: 30001
    targetPort: 3000
  - name: gogs-ssh
    port: 22
    protocol: TCP
    nodePort: 30002
    targetPort: 22

  selector:
    app: gogs
