gogs/gogs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gogs-ingress
spec:
  rules:
  - host: myvhostname.formydomain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gogs
          servicePort: 3000
